--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -39,3 +39,11 @@ body
 {
     padding: 1em;
 }
+
+#footer
+{
+    background:lightskyblue;
+    color: white;
+    text-align: center;
+    padding: auto;
+}
