--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -42,7 +42,7 @@ body
 
 #footer
 {
-    background:lightskyblue;
+    background:rgb(8, 77, 119);
     color: white;
     text-align: center;
     padding: auto;
